# typst-code-info

./: Cargo.toml  LICENSE  README.md  Taskfile.yml  plugin.typ  typst.toml
.github/fixtures/: diff.typ  line-numbers.typ
.github/scripts/: build-plugin.ts  install.ts  typst2svg.ts
src/: lib.rs
tests/fixtures/: caption-and-label.typ  code-block.typ
